--- a/frontend/www/styl/ratchet-android.styl
+++ b/frontend/www/styl/ratchet-android.styl
@@ -18,7 +18,7 @@ a
 .segmented-control 
   display none
   position fixed
-  
+  z-index 10
   .control-item
     background #232323
     color #666666
