--- a/frontend-html/Movies-Home v0.2/css/app.css
+++ b/frontend-html/Movies-Home v0.2/css/app.css
@@ -1,21 +1,4 @@
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Roboto Regular'), local('Roboto-Regular'), url(../fonts/Roboto-Regular.html);
-}
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    src: local('Roboto Medium'), local('Roboto-Medium'), url(../fonts/Roboto-Medium.ttf);
-}
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Roboto Bold'), local('Roboto-Bold'), url(../fonts/Roboto-Bold.ttf);
-}
+
 body {
     color: #ffffff;
 }
@@ -27,31 +10,26 @@ body {
 }
 .bar h1 {
     color: #ffffff;
-
 }
-.popcorn-title
-{
+.popcorn-title {
     left: 64px;
-position: absolute;
+    position: absolute;
     float: left;
-display: block;
-width: 100%;
-padding: 0;
-font-size: 17px;
-font-weight: 500;
-line-height: 52px;
-color: #000;
-white-space: nowrap;
-}    
-  
+    display: block;
+    width: 100%;
+    padding: 0;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 52px;
+    color: #000;
+    white-space: nowrap;
+}
 }
 header .icon {
     padding-left: 10px;
     padding-right: 10px;
 }
-
-.header-logo
-{
+.header-logo {
     position: relative;
     height: 100%;
     left: -17px;
@@ -59,8 +37,13 @@ header .icon {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
 .movie-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    align-items: flex-start;
     position: relative;
     height: 100%;
     padding-top: 6px;
@@ -88,23 +71,30 @@ header .icon {
 }
 .movie-item-meta-title {
     height: 22px;
-    margin-top: 2px;
+    margin-top: 4px;
     margin-left: 10px;
-    margin-bottom: 1px;
     color: #fff;
     max-width: 134px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400; 
+    font-size: 19px
+    
 }
+
 .movie-item-meta-year {
     opacity: 0.3;
     height: 22px;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     color: #fff;
     max-width: 134px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400; 
+    font-size: 14px
 }
