--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -1,4 +1,53 @@
 .movie-item
+  display inline-block
+  margin 5px
+  float left
+  font-size 0.8em
+  border-radius 5px
+  background-clip padding-box
+  background-color #23252b
+
+.movie-item-cover
+  background-image url("../images/posterholder.png")
+  background-size 150px 210px
+  width 150px
+  height 210px
+  border-radius 4px
+  cursor pointer
+  box-shadow 0 4px 11px rgba(0, 0, 0, .2), inset 0 3px 0 rgba(255, 255, 255, .12)
+  transition opacity 0.5s ease
+
+.movie-item-meta-title
+  height 22px
+  margin-top 4px
+  margin-left 10px
+  color #fff
+  max-width 134px
+  overflow hidden
+  text-overflow ellipsis
+  white-space nowrap
+  font-family 'Roboto', sans-serif
+  font-weight 400
+  font-size 19px
+
+.movie-item-meta-year
+  opacity 0.3
+  height 22px
+  margin-left 10px
+  margin-bottom 5px
+  color #fff
+  max-width 134px
+  overflow hidden
+  text-overflow ellipsis
+  white-space nowrap
+  font-family 'Roboto', sans-serif
+  font-weight 400
+  font-size 14px
+
+/*
+
+
+.movie-item
 	position: relative
 	width: 100%
 	height: 90px
@@ -48,7 +97,7 @@
 
 
 
-/*
+
 .movie-item
 	display inline-block;
 	margin 0.5px
