--- a/frontend/www/styl/ratchet-android.styl
+++ b/frontend/www/styl/ratchet-android.styl
@@ -29,3 +29,24 @@ a
       color #ffffff
       font-weight 500
 
+.popcorn-title
+  left 64px
+  position absolute
+  float left
+  display block
+  width 100%
+  padding 0
+  font-size 17px
+  font-weight 500
+  line-height 52px
+  color #000
+  white-space nowrap
+
+.header-logo
+  position relative
+  height 100%
+  //left -17px
+  float left
+  padding-top 10px
+  padding-bottom 10px
+
