--- a/frontend/www/styl/menu.styl
+++ b/frontend/www/styl/menu.styl
@@ -1,144 +1,140 @@
 .menu-overlay
-	position: fixed;
-	background: rgba(0, 0, 0, 0.3);
-	width: 100%;
-	height: 100%;
-	transition: all 0.3s;
-	z-index: 9;
+	position fixed
+	background rgba(0, 0, 0, 0.3)
+	width 100%
+	height 100%
+	transition all 0.3s
+	z-index 9
 	display none
 
-
-
 .menu 
-	z-index: 10;
-	height: 100%;
-	position: fixed;
-	background: #17181B;
-	right: -70%;
-	width: 70%;
-	overflow: auto;
-	top: 0;
-	box-shadow: 6px 0px 14px 6px #000;
-
+	z-index 10
+	height 100%
+	position fixed
+	background #17181B
+	right -70%
+	width 70%
+	overflow-y auto
+	overflow-x hidden
+	top 0
+	box-shadow 6px 0px 14px 6px #000
 
 	.menu-base 
-		list-style: none;
-		color: #FFF;
-		font-family: 'Roboto', sans-serif;
-		font-size: 30px;
-		font-weight: 400;
-		margin: 10px 0;
-
+		list-style none
+		color #FFF
+		font-family 'Roboto', sans-serif
+		font-size 30px
+		font-weight 400
+		margin 10px 0
+	
+		.genre-choosed, .genre-sort-by-choosed
+			background rgba(255, 255, 255, 0.1)
+			font-size 20px
+			border none
+			padding 6px 40px
+			margin -1px
+			color #808080
+		&:hover
+			border-left none
 
 .menu-base li, .sub-menu li, .sub-menu div 
-	cursor: pointer;
-
+	cursor pointer
 
 .menu-base a, .sub-menu a 
-	color: #fff;
-	text-decoration: none;
-
+	color #fff
+	text-decoration none
 
 .menu .menu-base > li 
-	border-left: 5px solid rgba(0, 0, 0, 0);
-	padding: 15px 10px;
-	transition: all 0.3s;
-	margin-left: 2%;
-	border-bottom: 1px solid #474747
-
+	border-left 5px solid rgba(0, 0, 0, 0)
+	padding 15px 10px
+	transition all 0.3s
+	margin-left 2%
+	border-bottom 1px solid #474747
 
 .menu .menu-base > li:hover 
-	border-left: 5px solid rgba(55, 73, 207, 0.3);
-
+	border-left 5px solid rgba(55, 73, 207, 0.3)
 
 .menu .menu-base>li.selected 
-	border-left: 5px solid #3749CF;
-	transition: all 0.3s;
-
+	border-left 5px solid #3749CF
+	transition all 0.3s
 
 .sub-menu 
-	z-index: 11;
-	height: 100%;
-	position: fixed;
-	background: #0C0C0C;
-	right: -60%;
-	width: 60%;
-	overflow: auto;
-	top: 0;
-	box-shadow: 6px 0px 14px 6px #000;
-
+	z-index 11
+	height 100%
+	position fixed
+	background #0C0C0C
+	right -60%
+	width 60%
+	overflow auto
+	top 0
+	box-shadow 6px 0px 14px 6px #000
 
 	div 
-		padding: 10px;
-		transition: all 0.3s;
-		list-style: none;
-		color: #FFF;
-		font-family: 'Roboto', sans-serif;
-		font-size: 24px;
-		font-weight: 400;
-		margin: 0;
-		background: rgba(0, 0, 0, 0.98);
-		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.95);
-		position: fixed;
-		width: 100%;
-
+		padding 10px
+		transition all 0.3s
+		list-style none
+		color #FFF
+		font-family 'Roboto', sans-serif
+		font-size 24px
+		font-weight 400
+		margin 0
+		background #333030
+		box-shadow 1px 1px 5px rgba(0, 0, 0, 0.95)
+		position fixed
+		width 100%
 
 .menu-genre 
-	padding: 10px 30px;
-	border-left: 5px solid rgba(0, 0, 0, 0);
-	transition: all 0.3s;
-	list-style: none;
-	color: #FFF;
-	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
-	display: none;
-	font-weight: 400;
-	margin: 45px 0 10px 0;
-
+	padding 10px 30px
+	border-left 5px solid rgba(0, 0, 0, 0)
+	transition all 0.3s
+	list-style none
+	color #FFF
+	font-family 'Roboto', sans-serif
+	font-size 24px
+	display none
+	font-weight 400
+	margin 45px 0 10px 0
+	scrollable()
 
 	li 
-		padding: 7px;
-		border-left: 5px solid rgba(0, 0, 0, 0);
-		transition: all 0.3s;
-		width: 100%;
-
+		padding 7px
+		border-left 5px solid rgba(0, 0, 0, 0)
+		transition all 0.3s
+		width 100%
 
 	li:hover 
-		background: rgba(0, 0, 0, 0.27);
-		width: 100%;
-		border-left: 5px solid rgba(66, 66, 66, 0.64);
-
+		background rgba(0, 0, 0, 0.27)
+		width 100%
+		border-left 5px solid rgba(66, 66, 66, 0.64)
 
 	li.selected
-		border-left: 5px solid #7C7C7C !important;
-		transition: all 0.3s;
+		border-left 5px solid #7C7C7C !important
+		transition all 0.3s
 
 .menu-sort-by 
-	padding: 10px 30px;
-	border-left: 5px solid rgba(0, 0, 0, 0);
-	transition: all 0.3s;
-	list-style: none;
-	color: #FFF;
-	display: none;
-	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
-	font-weight: 400;
-	margin: 45px 0 10px 0;
-
+	padding 10px 30px
+	border-left 5px solid rgba(0, 0, 0, 0)
+	transition all 0.3s
+	list-style none
+	color #FFF
+	display none
+	font-family 'Roboto', sans-serif
+	font-size 24px
+	font-weight 400
+	margin 45px 0 10px 0
+	scrollable()
 
 	li 
-		padding: 7px;
-		border-left: 5px solid rgba(0, 0, 0, 0);
-		transition: all 0.3s;
-		width: 100%;
-
+		padding 7px
+		border-left 5px solid rgba(0, 0, 0, 0)
+		transition all 0.3s
+		width 100%
 
 	li:hover 
-		background: rgba(0, 0, 0, 0.27);
-		width: 100%;
-		border-left: 5px solid rgba(66, 66, 66, 0.64);
-
+		background rgba(0, 0, 0, 0.27)
+		width 100%
+		border-left 5px solid rgba(66, 66, 66, 0.64)
 
 	li.selected
-		border-left: 5px solid #7C7C7C !important;
-		transition: all 0.3s;
+		border-left 5px solid #7C7C7C !important
+		transition all 0.3s
