--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -5,6 +5,7 @@
 .movie-list-region
     height 100%
     width 100%
+
     
 .movie-list
     height 100%
@@ -18,12 +19,21 @@
         margin-top 7%
 
     .movies
-        //padding-top 13%
         -webkit-user-select none
-        text-align left
+        text-align: left
+        -webkit-user-select: none;
+        text-align: left
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+        justify-content: space-between
+        align-content: flex-start
+        align-items: flex-start
+
+
         width 100%
         height 100%
-        display inline-block
+
 
     .error
         font-size 1.5em
